# DDD

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
DDD/: CMakeLists.txt  main.cpp
DDD/ddd_core/: ddd.cpp  ddd.hpp
DDD/modules/: module.cpp  module.hpp  module_info.cpp  module_info.hpp  module_manager.cpp  module_manager.hpp  pla_function.cpp  pla_function.hpp
DDD/processing/: module_manager.cpp  module_manager.hpp  mpi_manager.cpp  mpi_manager.hpp  process.cpp  process.hpp
DDD/utils/: callbacks.cpp  callbacks.hpp  divider.cpp  divider.hpp  mpi_communicator.cpp  mpi_communicator.hpp
experiments/: apex2_parsed_times.csv  apex2_script_output.txt  apex4_script_output.txt  apex5_parsed_times.csv  ex1010_parsed_times.csv  parsed_times_apex1.csv  parsed_times_cordic.csv  parsed_times_misex3.csv  parsed_times_t481.csv  pdc_script_output.txt  script_output_apex1.txt  script_output_cordic.txt  script_output_misex3c.txt  script_output_t481.txt  seq_parsed_times.csv  seq_script_output.txt
experiments/First round/: apex4_parsed_times.csv  apex5_script_output.txt  ex1010_script_output.txt  parsed_times_misex3c.csv  pdc_parsed_times.csv
experiments/M1_mpi/: alu4_parsed_times.csv  alu4_script_output.txt  script_output_misex3.txt
experiments/M1_serial/: all_serial_times.csv  serial_output_alu4.txt  serial_output_apex1.txt  serial_output_apex2.txt  serial_output_apex4.txt  serial_output_apex5.txt  (+19 more)
load_files/: working.txt
merged/: M0.pla  M1.pla  M2.pla  M3.pla
scripts/: test_multiple_plas.sh  time_parser.sh
(+143 files in other folders)
